--- a/week02/styles/media-qeuery-large.css
+++ b/week02/styles/media-qeuery-large.css
@@ -11,7 +11,7 @@
         background-color: rgb(200, 212, 233);
     }
     header {
-        background-color: black;
+        background-color: rgb(130, 130, 149);
         color:white;
     }
     main{
