--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -10,17 +10,19 @@
     text-decoration: none;
     list-style: none;
     font-family: 'Raleway', sans-serif;
-    line-height:1.8em;
+    line-height:1.5em;
 }
 .button{
     margin:10px;
-    padding:20px;
+    padding:10px;
     background-color: white;
     box-shadow: 0 0 20px rgb(187, 180, 177);
     color: var(--primary-color);
-    font-size:18px;
+    font-size:16px;
     border-radius: 5px;
     border:none;
+    /* width: 80px;
+    height: 40px; */
 }
 
 .logo img{ 
@@ -76,22 +78,22 @@ nav {
     gap:40px;  
 }
 .hero-section img{
-    width: 1600px;
-    height: 500px;
+    width: 400px;
+    height: 250px;
 }
 div .hero-text{
     background-color: rgba(255, 255, 255, 0.574);
     position: absolute;
-    margin:10px;
-    border-radius: 5px;
+    border-radius:5px;
     
 }
 .hero-text{  
-    padding:30px;
+    padding:10px;
 }
 .hero-text p {
     padding: 20px 0 20px;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 500;
 }
 .button:hover{
     background-color:var(--primary-color);
@@ -99,12 +101,13 @@ div .hero-text{
     font-weight: bold;
 }
 
-.more-title h1{
+.more-title h2{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 10px;
     background-color: var(--second-color);
+    font-size:30px;
 }
 .more{
     display:flex;
@@ -144,33 +147,66 @@ img.icons:hover{
     width: 333px;
     height: auto;
 }
-.statement h1, .statement p{
+.statement h2, .statement p{
     padding: 20px;
     flex-wrap: wrap;
    
 }
+
+/* middle section  */
 .mid-section{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin:20px 20px;
+    /* margin:20px 20px; */
+    background-image: linear-gradient(#c9dae1c6, white);
    
 }
 .weather{
-    width: 20em;
-    height: 10em;
+    width: 60em;
+    height: auto;
     margin:20px;
     overflow: hidden;
     background-color: var(--primary-color);
     color: white;
     padding: 20px;
     border-radius: 5px;
+    
 }
 .weather img{
-    float:right;
-    width:180px;
+   float:left;
+    width:140px;
     height: auto;
 }
+p.temp{
+    font-size: 35px;
+    font-weight:500;
+}
+div.home-weather1{
+    padding-bottom: 20px;
+}
+div.home-weather2  h2{
+    padding: 10px;
+}
+div.square{
+    background-color: rgba(255, 255, 255, 0.225);
+    padding:10px 5px 10px;
+    margin:6px;
+    border-radius: 6px;
+   
+}
+section#forecast{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    
+}
+img.weather-icon{
+    width: 50%;
+   padding: 30px 30px 0;
+  
+}
+
 .event{
     width: 40em;
     margin:20px;
@@ -179,6 +215,12 @@ img.icons:hover{
     color: white;
     padding: 20px;
     border-radius: 5px;
+}
+div.news-title h2{
+    display: flex;
+    justify-content: center;
+    margin:30px 0 0 30px;
+    font-size: 30px;
 }
 .card{
     width: 325px;
@@ -191,7 +233,8 @@ img.icons:hover{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top:100px ;
+    margin-top:100px;
+    
 }
 .title h1{
     display:flex;
@@ -231,17 +274,38 @@ footer{
     height: 8em;
 }
 footer p{
-    margin-left: 40px;
+    
     padding: 6px;
     display: flex;
     justify-content: center;
 }
 #lastModified{
-    color: grey;
+    color: var(--primary-color);
     display: flex;
     flex-direction: row;
     justify-content: center;
     font-size: 10px;
+}
+
+.spotlightCard{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    margin-left:20px;
+}
+h2.title-business{
+display: flex;
+justify-content: center;
+margin:30px 0 0 30px;
+font-size: 30px;
+}
+
+.spotlightCard img{
+    width:50%;
+    padding:10px;
+}
+.spotlightCard h4, p, a{
+    padding:8px;
 }
 /* dark mode */
 #mode {
@@ -252,16 +316,18 @@ footer p{
     text-align: center;
 	cursor: pointer;
 	font-size: 10px;
+    margin-right: 10px;
 }
 .dark-mode {
 	background-color: #000;
 	color: #fff;
+    
 }
 
 /* discovery page styling */
 .grid-area{
-    display: grid;
-    grid-template-columns: 400px 1fr;
+    display: flex;
+    flex-direction: column;
 }
 .sidebar{
     background-color:white;
@@ -271,13 +337,22 @@ footer p{
     border-radius: 5px;
     margin:30px;
     padding:20px;
+
+}
+.grid-area h1{
+    margin-left: 30px;
+    border-bottom: 1px solid var(--second-color);
 }
 .main{
     background-color: var(--second-color);
-    display: grid;
-    grid-template-columns: 400px 400px;
-    gap: 50px;
-    padding:20px; 
+    display: flex;
+    flex-direction: column;
+    padding:36px;
+}
+section.main img{
+   width:20em; 
+   height: auto;
+   padding-top: 20px;
 }
 @keyframes fade {  
     0% {
@@ -288,23 +363,27 @@ footer p{
     }
 }
 
+
 /* join page  */
 h1.header{
     margin-left:40px;
     border-bottom: 1px solid var(--second-color);
 }
 .grid-form{
-    display: grid;
-    grid-template-columns: 650px 800px;
+    display: flex;
+    flex-direction: column-reverse;
+    /* display: grid;
+    grid-template-columns: 650px 800px; */
 }
 fieldset{
-    width: 500px;
+    width: 300px;
 }
 .member-form{
     display: grid;
     grid-template-columns: 400px;
-    margin-left: 40px;
+    margin-left: 10px;
     padding: 20px;
+     
 }
 .member-desc{
     margin-right: 40px;
@@ -340,7 +419,7 @@ fieldset{
     padding: .75rem;
     color:#556065;
     width:100%;
-    max-width: 400px;
+    max-width: 270px;
     appearance:none;
 }
 .mform input[type="radio"]{
@@ -371,4 +450,73 @@ div.thanks{
     justify-content: center;
     padding: 40px;
     margin: 40px;
+}
+
+/* directory style */
+main.directory {
+    margin: 0 auto;
+    padding: 0.5rem;
+    max-width: 700px;   
+} 
+h1.directory-title{
+    margin-left: 30px;
+    border-bottom: 1px solid var(--second-color);
+}
+.menu{
+    margin: 3rem auto;
+    text-align: center;
+}
+.cardview img{ 
+width:40%;
+height: auto;
+align-items: center;
+}
+.cardview {
+    display:flex;
+    flex-direction: column;
+}
+.cardview div{
+    background-color:white;
+    box-shadow: 0 0 20px rgb(212, 205, 203);
+    padding:10px;
+    align-items: center;
+    text-align: center;
+    margin:10px;
+}
+.listview{
+    display:none;
+}
+.list{
+    display: flex;
+    flex-direction: column;
+}
+.list section {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 0;
+    padding:0.25rem;
+}
+.list section >*{
+    margin:0 1rem;
+}
+.list section img{
+    display: none;
+}
+.list section h3{
+    font-size: 1rem;
+}
+.list section:nth-child(even){
+    background-color: var(--second-color);
+}
+.banner{
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width:100%;
+    background-color:rgba(48, 80, 23, 0.883);
+    color:white;
+    font-weight:500;
+    text-align: center;
+    padding:10px 70px 10px 0;
 }
