--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -15,11 +15,30 @@
         color:var(--primary-color);
         padding: 3em;
     }
-    .navigation li a:hover, .navigation li a:active{
+    .navigation li a:hover{
         font-weight:bold;
         background-color: white;
         border-bottom: 3px solid var(--second-color);
         padding-bottom: 5px;
+    }
+    .hero-section img{
+        width: 1420px;
+        height: 500px;
+    }
+    div .hero-text{
+        background-color: rgba(255, 255, 255, 0.574);
+        position: absolute;
+        margin:10px;
+        border-radius: 5px;
+        
+    }
+    .hero-text{  
+        padding:30px;
+    }
+    .hero-text p {
+        padding: 20px 0 20px;
+        font-size: 20px;
+        font-weight: 500;
     }
     .more{
         display: flex;
@@ -33,25 +52,53 @@
         flex-direction: row;
         justify-content: space-around;
     }
+    
+    article.weather{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    div.home-weather1{
+        margin:10px;
+    }
+    .spotlightCard{
+        display: flex;
+        flex-direction: row;
+    }
    footer p{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    margin-left:40px;
    }
-}
-/* discovery page styling */
-.grid-area{
+
+   /* discovery page styling */
+   .grid-area{
     display: grid;
     grid-template-columns: 400px 1fr;
+    grid-template-rows:auto auto;
+    gap:10px;
 }
 .sidebar{
     background-color:white;
+    display: grid;
+    grid-column:1/span 1;
+    grid-row:2;
+
 }
 .details{
     box-shadow: 0 0 20px rgb(212, 205, 203);
     border-radius: 5px;
     margin:30px;
     padding:20px;
+
+}
+.grid-area h1{
+    display: grid;
+    grid-row:1;
+    grid-column: 1/span 2;
+    margin-left: 30px;
+    border-bottom: 1px solid var(--second-color);
 }
 .main{
     background-color: var(--second-color);
@@ -59,11 +106,7 @@
     grid-template-columns: 400px 400px;
     gap: 50px;
     padding:20px; 
-}
-.main img{
-    width: 100%;
-    background: black;
-    animation: fade 15s;
+
 }
 @keyframes fade {  
     0% {
@@ -73,4 +116,103 @@
         opacity: 1;
     }
 }
-    
+/* join page  */
+h1.header{
+    margin-left:40px;
+    border-bottom: 1px solid var(--second-color);
+}
+.grid-form{
+    display: grid;
+    grid-template-columns: 650px 800px;
+}
+fieldset{
+    width: 500px;
+}
+.member-form{
+    display: grid;
+    grid-template-columns: 400px;
+    margin-left: 40px;
+    padding: 20px;
+}
+.member-desc{
+    margin-right: 40px;
+}
+
+/* form styling */
+.mform fieldset{
+    margin: 2rem 0;
+    border: 1px solid var(--second-color);
+    border-radius: 6px;
+    padding:.5rem 2%;
+}
+.mform legend{
+    color:var(--third-color);
+    padding: 0 .5rem;
+    font-weight: bold;
+}
+.mform label{
+    display: block;
+    padding-top: 1rem;
+    color:var(--primary-color);
+    font-size: .9rem;
+}
+
+.mform input[type="text"],
+.mform input[type="tel"],
+.mform input[type="email"]
+{
+    background-color: var(--second-color);
+    display:block;
+    border:solid 1px var(--second-color);
+    border-radius: 6px;
+    padding: .75rem;
+    color:#556065;
+    width:100%;
+    max-width: 400px;
+    appearance:none;
+}
+.mform input[type="radio"]{
+    margin-right:6px;
+}
+
+#gold{
+    background-image:linear-gradient(to right, rgba(254, 249, 218, 0.7), rgba(241, 191, 29, 0.7));
+}
+#silver{
+    background-image:linear-gradient(to right, rgba(203, 209, 216, 0.7), rgba(150, 150, 152, 0.7));
+}
+#bronze{
+    background-image:linear-gradient(to right, rgba(225, 206, 180, 0.7), rgba(202, 130, 59, 0.7));
+}
+#np{
+    background-image:linear-gradient(to right,rgba(191, 220, 169, 0.7), rgba(77, 116, 47, 0.7));
+}
+.gesture img{
+    margin-bottom: 20px;
+    width: 90px;
+    height: auto;
+}
+div.thanks{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+    margin: 40px;
+}
+/* directory page */
+.cardview {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:20px;
+    margin-bottom: 10px;
+}
+.cardview div{
+    background-color:white;
+    box-shadow: 0 0 20px rgb(212, 205, 203);
+    padding:10px;
+    align-items: center;
+    text-align: center;
+}
+
+}
