--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -80,7 +80,7 @@
     gap:10px;
 }
 .sidebar{
-    background-color:white;
+    background-color:rgba(255, 255, 255, 0.555);
     display: grid;
     grid-column:1/span 1;
     grid-row:2;
